--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -28,7 +28,7 @@ ENDIF()
 INCLUDE_DIRECTORIES( ${BOOST_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${PYTHON_INCLUDE_DIR} )
 
-set(PYTHONDIR ${CMAKE_SOURCE_DIR}/python)
+set(PYTHONDIR ${PROJECT_SOURCE_DIR}/python/)
 
 add_definitions(-DMODULE_NAME=opcua)
 ADD_LIBRARY(opcua SHARED 
