Add Cflags lines to .pc.in files
This is needed when using an install prefix

--- a/libopcuaclient.pc.in
+++ b/libopcuaclient.pc.in
@@ -6,5 +6,6 @@ includedir=@includedir@
 Name: libopcuacore
 Description: Opcua core infrastructure.
 Version: @PACKAGE_VERSION@
+Cflags: -I${includedir}
 Libs: -L${libdir} -lopcuaclient
 
