--- a/libopcuaprotocol.pc.in
+++ b/libopcuaprotocol.pc.in
@@ -6,5 +6,6 @@ includedir=@includedir@
 Name: libopcuaprotocol
 Description: Opcua protocol library.
 Version: @PACKAGE_VERSION@
+Cflags: -I${includedir}
 Libs: -L${libdir} -lopcuaprotocol
 
