--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,39 +52,45 @@ function(generate_pkgconfig BASENAME)
         endif()
     endif()
 endfunction(generate_pkgconfig)
-
-if(WIN32)
-    SET(gtest_force_shared_crt "Use shared (DLL) run-time lib even when Google Test is built as static lib." ON)
+if(MSVC)
     SET(STATIC_LIBRARY_CXX_FLAGS  /MDd)
     SET(EXECUTABLE_CXX_FLAGS /MDd)
     SET(DYNAMIC_LIBRARY_CXX_FLAGS /MDd)
     SET(D  /D)
-    SET(ADDITIONAL_LINK_LIBRARIES Wininet.lib wsock32.lib)
-    SET(OS_SUFFIX _win)
-    STRING(REGEX REPLACE "/" "\\\\\\\\" DYNAMIC_ADDON_PATH "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Debug/test_dynamic_addon.dll")
-    STRING(REGEX REPLACE "/" "\\\\\\\\" TEST_CORE_CONFIG_PATH "${PROJECT_SOURCE_DIR}/tests/core/configs/")
-
     add_definitions(/D_SCL_SECURE_NO_WARNINGS /D_CRT_SECURE_NO_WARNINGS /D_WIN32 /D_WINDOWS /FS /D_WIN32_WINNT=0x0600)
     add_compile_options(/Zi /Od /EHsc /W4)
-
-#    if(MSVC)
-#        set(CMAKE_CXX_STACK_SIZE "2000000")
-#    endif()
-
-else(WIN32)
+else(MSVC)
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -ggdb -o0")
 
     SET(STATIC_LIBRARY_CXX_FLAGS)
     SET(EXECUTABLE_CXX_FLAGS)
     SET(DYNAMIC_LIBRARY_CXX_FLAGS)
     SET(D -D)
+    set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -std=c++11 -Wall -fPIC ") 
+    SET (CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_INIT} $ENV{LDFLAGS})
+    #set(CMAKE_SHARED_LINKER_FLAGS "--no-undefined" )
+endif()
+
+if(WIN32)
+    SET(gtest_force_shared_crt "Use shared (DLL) run-time lib even when Google Test is built as static lib." ON)
+    SET(ADDITIONAL_LINK_LIBRARIES Wininet.lib wsock32.lib)
+    if(CMAKE_COMPILER_IS_GNUCC)
+        SET(ADDITIONAL_LINK_LIBRARIES ${ADDITIONAL_LINK_LIBRARIES} ws2_32.lib)
+    endif()
+
+    SET(OS_SUFFIX _win)
+    STRING(REGEX REPLACE "/" "\\\\\\\\" DYNAMIC_ADDON_PATH "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/Debug/test_dynamic_addon.dll")
+    STRING(REGEX REPLACE "/" "\\\\\\\\" TEST_CORE_CONFIG_PATH "${PROJECT_SOURCE_DIR}/tests/core/configs/")
+
+#    if(MSVC)
+#        set(CMAKE_CXX_STACK_SIZE "2000000")
+#    endif()
+
+else(WIN32)
     SET(DYNAMIC_ADDON_PATH "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libtest_dynamic_addon.so")
     SET(TEST_CORE_CONFIG_PATH " ${PROJECT_SOURCE_DIR}/tests/core/configs/")
     SET(OS_SUFFIX _lin)
 
-    set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -std=c++11 -Wall -fPIC ") 
-    SET (CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_INIT} $ENV{LDFLAGS})
-    #set(CMAKE_SHARED_LINKER_FLAGS "--no-undefined" )
 
     find_package(LibXml2 REQUIRED) 
     message(STATUS "LibXML2 INCLUDE DIR IS: " ${LIBXML2_INCLUDE_DIR})
@@ -96,10 +102,10 @@ else(WIN32)
 endif(WIN32)
 
 find_package( Boost COMPONENTS system program_options filesystem thread REQUIRED )
-include_directories( ${Boost_INCLUDE_DIR} )
-link_directories( ${Boost_LIBRARY_DIR} )
-message(STATUS "Boost INCLUDE DIR IS: " ${Boost_INCLUDE_DIR})
-message(STATUS "Boost LIBRARY DIR IS: " ${Boost_LIBRARY_DIR})
+include_directories( ${Boost_INCLUDE_DIRS} )
+link_directories( ${Boost_LIBRARY_DIRS} )
+message(STATUS "Boost INCLUDE DIR IS: " ${Boost_INCLUDE_DIRS})
+message(STATUS "Boost LIBRARY DIR IS: " ${Boost_LIBRARY_DIRS})
 
 SET(TEST_INCLUDES, "")
 IF(BUILD_TESTING)
@@ -237,7 +243,7 @@ SET(opcuacore_SOURCES
 add_library(opcuacore ${opcuacore_SOURCES})
 
 target_compile_options(opcuacore PUBLIC ${STATIC_LIBRARY_CXX_FLAGS})
-target_link_libraries(opcuacore ${ADDITIONAL_LINK_LIBRARIES} opcuaprotocol)
+target_link_libraries(opcuacore ${ADDITIONAL_LINK_LIBRARIES} opcuaprotocol ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
 target_include_directories(opcuacore PUBLIC $<INSTALL_INTERFACE:include>)
 install(TARGETS opcuacore EXPORT FreeOpcUa
                           LIBRARY DESTINATION lib
@@ -295,6 +301,7 @@ if (BUILD_CLIENT)
     target_link_libraries(opcuaclient 
         opcuacore 
         ${ADDITIONAL_LINK_LIBRARIES} 
+	${Boost_PROGRAMOPTIONS_LIBRARY}
         )
     target_include_directories(opcuaclient PUBLIC $<INSTALL_INTERFACE:include>)
     install(TARGETS opcuaclient EXPORT FreeOpcUa
@@ -326,6 +333,7 @@ if (BUILD_CLIENT)
 
     target_link_libraries(opcuaclientapp
         ${ADDITIONAL_LINK_LIBRARIES}
+	${Boost_PROGRAM_OPTIONS_LIBRARY}
         opcuaprotocol
         opcuacore
     )
@@ -380,7 +388,7 @@ if(BUILD_SERVER)
         )
 
     target_compile_options(opcuaserver PUBLIC ${STATIC_LIBRARY_CXX_FLAGS})
-    target_link_libraries(opcuaserver ${ADDITIONAL_LINK_LIBRARIES} opcuacore opcuaprotocol)
+    target_link_libraries(opcuaserver ${ADDITIONAL_LINK_LIBRARIES} opcuacore opcuaprotocol ${Boost_SYSTEM_LIBRARY})
     target_include_directories(opcuaserver PUBLIC $<INSTALL_INTERFACE:include>)
     install(TARGETS opcuaserver EXPORT FreeOpcUa
                                 LIBRARY DESTINATION lib
@@ -459,6 +467,7 @@ if(BUILD_SERVER)
         opcuaprotocol
         opcuacore
         opcuaserver
+	${Boost_PROGRAM_OPTIONS_LIBRARY}
         )
     target_compile_options(opcuaserverapp PUBLIC ${EXECUTABLE_CXX_FLAGS})
 
