--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,10 +53,11 @@ function(generate_pkgconfig BASENAME)
     endif()
 endfunction(generate_pkgconfig)
 if(MSVC)
-    SET(STATIC_LIBRARY_CXX_FLAGS  /MDd)
-    SET(EXECUTABLE_CXX_FLAGS /MDd)
-    SET(DYNAMIC_LIBRARY_CXX_FLAGS /MDd)
+    SET(STATIC_LIBRARY_CXX_FLAGS  /MDd CACHE STRING "")
+    SET(EXECUTABLE_CXX_FLAGS /MDd  CACHE STRING "")
+    SET(DYNAMIC_LIBRARY_CXX_FLAGS /MDd  CACHE STRING "")
     SET(D  /D)
+        
     add_definitions(/D_SCL_SECURE_NO_WARNINGS /D_CRT_SECURE_NO_WARNINGS /D_WIN32 /D_WINDOWS /FS /D_WIN32_WINNT=0x0600)
     add_compile_options(/Zi /Od /EHsc /W4)
 else(MSVC)
