Use correct name for variable holding testing libraries
The test definitions below use the undefined variable TEST_LIBS to set
target link libraries. Rename the variable to ensure that the dependencies
are set properly.
Removed explicit dependency to gtest since it is added implicitly when
linking against gtest_main.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,7 @@ include_directories(
     )
 
 if(BUILD_TESTING)
-    set(TESTING_LIB "gtest gtest_main")
+    set(TEST_LIBS gtest_main)
     enable_testing()
     add_subdirectory(tests/gtest)
 endif(BUILD_TESTING)
