--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,28 +1,26 @@
+cmake_minimum_required(VERSION 2.8.8)
 
-SET(PYTHONFOUND FALSE)
-FIND_PACKAGE( Boost COMPONENTS python-py34 )
-IF(Boost_PYTHON-PY34_FOUND)
-    SET(Python_ADDITIONAL_VERSIONS 3.4) #HACK UNTIL CORRENT CMAKE SUPPORT
-    FIND_PACKAGE(PythonLibs 3.4)
-    IF(PYTHONLIBS_FOUND)
-        MESSAGE(STATUS "Compiling Python module with Python 3.4")
-        SET(PYTHONFOUND TRUE)
+FIND_PACKAGE(PythonLibs)
+IF(PYTHONLIBS_FOUND)
+    MESSAGE(STATUS "Compiling module for python ${PYTHONLIBS_VERSION_STRING}")
+    string(REPLACE "." ";" PYTHONLIBS_VERSION_LIST ${PYTHONLIBS_VERSION_STRING})
+    LIST(GET PYTHONLIBS_VERSION_LIST 0 PYTHON_VERSION_MAJOR)
+    IF(PYTHON_VERSION_MAJOR EQUAL 2)
+      FIND_PACKAGE(Boost COMPONENTS python)
+      IF(NOT (Boost_PYTHON_FOUND STREQUAL "ON"))
+        MESSAGE(STATUS "Boost python lib not found: Not building python module")
+        RETURN()
+      ENDIF()
+    ELSE()
+      FIND_PACKAGE(Boost COMPONENTS python${PYTHON_VERSION_MAJOR})
+      IF(NOT (Boost_PYTHON${PYTHON_VERSION_MAJOR}_FOUND STREQUAL "ON"))
+        MESSAGE(STATUS "Boost python${PYTHON_VERSION_MAJOR} lib not found: Not building python${PYTHON_VERSION_MAJOR} module")
+        RETURN()
+      ENDIF()
     ENDIF()
-ENDIF()
-IF(NOT PYTHONFOUND)
-    FIND_PACKAGE( Boost COMPONENTS python )
-    IF(Boost_PYTHON_FOUND)
-        FIND_PACKAGE(PythonLibs 2.7)
-        IF(PYTHONLIBS_FOUND)
-            MESSAGE("Compiling Python module")
-            SET(PYTHONFOUND TRUE)
-        ENDIF()
-    ENDIF()
-ENDIF()
-
-IF(NOT PYTHONFOUND)
-    MESSAGE(STATUS "Python boost or lib not found: Not building python module")
-    RETURN()
+ELSE()
+  MESSAGE(STATUS "Python lib not found: Not building python module")
+  RETURN()
 ENDIF()
 
 INCLUDE_DIRECTORIES( ${BOOST_INCLUDE_DIR} )
