Fix configure.ac for automake < 1.11.2 (RHEL6)

--- a/configure.ac
+++ b/configure.ac
@@ -14,7 +14,7 @@ AM_INIT_AUTOMAKE([-Wall -Werror])
 CXXFLAGS="-O0 -g -std=c++11"
 
 AC_PROG_CXX
-AM_PROG_AR
+m4_ifdef([AM_PROG_AR],[AM_PROG_AR])
 AC_PROG_LIBTOOL
 PKG_PROG_PKG_CONFIG
 
