--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,6 +165,8 @@ add_library(opcuaprotocol
     src/protocol/session.cpp
     src/protocol/status_codes.cpp
     src/protocol/string_utils.cpp
+    src/protocol/string_utils_attributeid_tostring.cpp
+    src/protocol/string_utils_objectid_tostring.cpp
     src/protocol/string_utils_statuscode_tostring.cpp
     src/protocol/subscriptions.cpp
 )
