cleanup autoreconf autogenerated files

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,29 @@ schemas/sys
 
 Debug/
 Release/
+
+compile
+install-sh
+ltmain.sh
+python/INSTALL
+python/Makefile.in
+python/install-sh
+test-driver
+tests/gmock/Makefile.in
+tests/gmock/gtest/Makefile.in
+tests/gtest/Makefile.in
+debian/changelog
+libopcuaclient.pc
+libopcuacore.pc
+libopcuaprotocol.pc
+libopcuaserver.pc
+libtool
+stamp-h1
+tests/gmock/gtest/libtool
+tests/gmock/gtest/scripts/gtest-config
+tests/gmock/libtool
+tests/gmock/scripts/gmock-config
+tests/gtest/libtool
+tests/gtest/scripts/gtest-config
+.mypy_cache
+vscode
