MBEDTLS: no hard-coded paths in CMakeLists.txt, enabled by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,7 @@ project(freeopcua)
 option(BUILD_CLIENT "Build Client" ON)
 option(BUILD_SERVER "Build Server" ON)
 
-option(SSL_SUPPORT_MBEDTLS "Support rsa-oaep password encryption using mbedtls library " OFF)
-option(SSL_SUPPORT_MBEDTLS_INCLUDE_DIR "mbedtls include dir " "/usr/local/include")
-option(SSL_SUPPORT_MBEDTLS_LIB_DIR "mbedtls libraries dir " "/usr/local/lib")
+option(SSL_SUPPORT_MBEDTLS "Support rsa-oaep password encryption using mbedtls library " ON)
 
 option(BUILD_PYTHON "Build Python bindings" ON)
 option(BUILD_TESTING "Build and run tests" OFF)
@@ -117,12 +115,19 @@ link_directories( ${Boost_LIBRARY_DIRS} )
 message(STATUS "Boost INCLUDE DIR IS: " ${Boost_INCLUDE_DIRS})
 message(STATUS "Boost LIBRARY DIR IS: " ${Boost_LIBRARY_DIRS})
 
+message(STATUS "SSL support using libmbedtls: " ${SSL_SUPPORT_MBEDTLS})
 if (SSL_SUPPORT_MBEDTLS)
     add_definitions(-DSSL_SUPPORT_MBEDTLS)
-    include_directories( ${SSL_SUPPORT_MBEDTLS_INCLUDE_DIR} )
-    link_directories( ${SSL_SUPPORT_MBEDTLS_LIB_DIR} )
+    IF (DEFINED SSL_SUPPORT_MBEDTLS_INCLUDE_DIR)
+        message(STATUS "  mbedtls library INCLUDE_DIR: " ${SSL_SUPPORT_MBEDTLS_INCLUDE_DIR})
+        include_directories( ${SSL_SUPPORT_MBEDTLS_INCLUDE_DIR} )
+    ENDIF ()
+    IF (DEFINED SSL_SUPPORT_MBEDTLS_LIB_DIR)
+        message(STATUS "  mbedtls library LIB_DIR: " ${SSL_SUPPORT_MBEDTLS_LIB_DIR})
+        link_directories( ${SSL_SUPPORT_MBEDTLS_LIB_DIR} )
+    ENDIF ()
     SET(SSL_SUPPORT_LINK_LIBRARIES mbedx509 mbedtls mbedcrypto)
-    message(STATUS "SSL LIBRARIES: " ${SSL_SUPPORT_LINK_LIBRARIES})
+    message(STATUS "  mbedtls LIBRARIES: " ${SSL_SUPPORT_LINK_LIBRARIES})
 endif (SSL_SUPPORT_MBEDTLS)
 
 SET(TEST_INCLUDES, "")
