cmake: fix deprecated FindPythonLibs & FindBoost usage
see:
https://cmake.org/cmake/help/latest/module/FindPythonLibs.html
https://cmake.org/cmake/help/latest/module/FindPython.html
https://cmake.org/cmake/help/latest/module/FindBoost.html

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,22 +1,12 @@
 cmake_minimum_required(VERSION 2.8.8)
 
-FIND_PACKAGE(PythonLibs)
-IF(PYTHONLIBS_FOUND)
-    MESSAGE(STATUS "Compiling module for python ${PYTHONLIBS_VERSION_STRING}")
-    string(REPLACE "." ";" PYTHONLIBS_VERSION_LIST ${PYTHONLIBS_VERSION_STRING})
-    LIST(GET PYTHONLIBS_VERSION_LIST 0 PYTHON_VERSION_MAJOR)
-    IF(PYTHON_VERSION_MAJOR EQUAL 2)
-      FIND_PACKAGE(Boost COMPONENTS python)
-      IF(NOT (Boost_PYTHON_FOUND STREQUAL "ON"))
-        MESSAGE(STATUS "Boost python lib not found: Not building python module")
-        RETURN()
-      ENDIF()
-    ELSE()
-      FIND_PACKAGE(Boost COMPONENTS python${PYTHON_VERSION_MAJOR})
-      IF(NOT (Boost_PYTHON${PYTHON_VERSION_MAJOR}_FOUND STREQUAL "ON"))
-        MESSAGE(STATUS "Boost python${PYTHON_VERSION_MAJOR} lib not found: Not building python${PYTHON_VERSION_MAJOR} module")
-        RETURN()
-      ENDIF()
+FIND_PACKAGE(Python COMPONENTS Interpreter Development)
+IF(Python_FOUND)
+    MESSAGE(STATUS "Compiling module for python ${Python_VERSION}")
+    FIND_PACKAGE(Boost COMPONENTS python${Python_VERSION_MAJOR}${Python_VERSION_MINOR})
+    IF(NOT Boost_PYTHON_FOUND)
+      MESSAGE(STATUS "Boost python${Python_VERSION_MAJOR}${Python_VERSION_MINOR} lib not found: Not building python module")
+      RETURN()
     ENDIF()
 ELSE()
   MESSAGE(STATUS "Python lib not found: Not building python module")
