enable VERBOSE option in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
+dist: xenial
 language: cpp
 compiler: gcc
+env: VERBOSE=1
 
 install:
-  - sudo apt-get install libboost1.54-all-dev -qq
-  - sudo apt-get install libboost-python1.54-dev -qq
+  - sudo apt-get install libboost-all-dev -qq
+  - sudo apt-get install libboost-python-dev -qq
   - sudo apt-get install libcppunit-dev
 
 #script: autoreconf -f -i && ./configure --disable-python-bindings && make && make check
