Use cmake instead of pkgconfig to find cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,13 +115,10 @@ else(WIN32)
 endif(WIN32)
 
 if(UNIX)
-    include(FindPkgConfig QUIET)
-    if(PKG_CONFIG_FOUND)
-        pkg_search_module(SPDLOG spdlog)
-        if(SPDLOG_FOUND)
-            add_compile_options(${SPDLOG_CFLAGS} -DHAVE_SYSTEM_SPDLOG)
-            SET(ADDITIONAL_LINK_LIBRARIES ${ADDITIONAL_LINK_LIBRARIES} ${SPDLOG_LDFLAGS})
-        endif()
+    find_package(spdlog)
+    if(spdlog_FOUND)
+        add_compile_options(-DHAVE_SYSTEM_SPDLOG)
+        link_libraries(spdlog::spdlog)
     endif()
 endif()
 
